--- a/CEA101G5/WebContent/front-customer-end/restaurant/css/css.css
+++ b/CEA101G5/WebContent/front-customer-end/restaurant/css/css.css
@@ -500,273 +500,274 @@ nav a+a::before {
 
 /* 申請信 */
 .sign-up-container {
-	width: 100%;
-	padding-top: 208.3333333333px;
-	font-family: "Source Sans Pro", sans-serif;
-	font-weight: 300;
-	padding-top: 350px;
-	padding-bottom: 150px;
-	margin-top: 6.9%;
+    width: 100%;
+    padding-top: 208.3333333333px;
+    font-family: "Source Sans Pro", sans-serif;
+    font-weight: 300;
+    padding-top: 350px;
+    padding-bottom: 150px;
+    margin-top: 6.9%;
 }
 
 .paper {
-	width: 85%;
-	box-sizing: border-box;
-	margin: 0 auto;
-	position: relative;
-	top: -145px;
-	padding: 1rem 1.4rem 125px 1.4rem;
-	background: #FFFFFF;
-	background: linear-gradient(to bottom, #FFFFFF 43%, #e0e0e0 100%);
-	color: #9C9C9C;
-	box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-	border-radius: 4px;
+    width: 85%;
+    box-sizing: border-box;
+    margin: 0 auto;
+    position: relative;
+    top: -145px;
+    padding: 1rem 1.4rem 125px 1.4rem;
+    background: #FFFFFF;
+    background: linear-gradient(to bottom, #FFFFFF 43%, #e0e0e0 100%);
+    color: #9C9C9C;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
 }
 
 .sign-up-container h1 {
-	margin-bottom: 1rem;
-	margin-top: 0;
-	text-align: center;
-	font-size: 1.5em;
-	font-weight: 300;
+    margin-bottom: 1rem;
+    margin-top: 0;
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: 300;
 }
 
-.text-input, .button {
-	box-sizing: border-box;
-	padding: 0.2em 0.67em;
-	margin-bottom: 0.5rem;
-	background: transparent;
-	border: none;
-	border-radius: 2em;
-	outline: none;
-	height: 5vh;
+.text-input,
+.button {
+    box-sizing: border-box;
+    padding: 0.2em 0.67em;
+    margin-bottom: 0.5rem;
+    background: transparent;
+    border: none;
+    border-radius: 2em;
+    outline: none;
+    height: 5vh;
 }
 
 .button {
-	border: 1px solid #9C9C9C;
-	transition: background 0.1s, color 0.1s;
-	font-size: 1.5em;
+    border: 1px solid #9C9C9C;
+    transition: background 0.1s, color 0.1s;
+    font-size: 1.5em;
 }
 
 .button:hover {
-	background: #9C9C9C;
-	color: #FFFFFF;
+    background: #9C9C9C;
+    color: #FFFFFF;
 }
 
 .text-input {
-	background: rgba(156, 156, 156, 0.1);
-	color: dimgray;
+    background: rgba(156, 156, 156, 0.1);
+    color: dimgray;
 }
 
 .text-input::-moz-placeholder {
-	color: inherit;
-	font-style: italic;
+    color: inherit;
+    font-style: italic;
 }
 
 .text-input:-ms-input-placeholder {
-	color: inherit;
-	font-style: italic;
+    color: inherit;
+    font-style: italic;
 }
 
 .text-input::placeholder {
-	color: inherit;
-	font-style: italic;
+    color: inherit;
+    font-style: italic;
 }
 
 .sign-up-form {
-	width: 100%;
+    width: 100%;
 }
 
 .sign-up-form * {
-	width: 100%;
+    width: 100%;
 }
 
 .envelope {
-	position: relative;
-	width: 400px;
-	height: 250px;
-	margin: 0 auto;
-	background: #73c0e4;
-	border-radius: 24px;
+    position: relative;
+    width: 400px;
+    height: 250px;
+    margin: 0 auto;
+    background: #73c0e4;
+    border-radius: 24px;
 }
 
 .envelope:before {
-	content: "";
-	display: block;
-	position: absolute;
-	top: -240px;
-	width: 0;
-	height: 0;
-	z-index: -1;
-	border-width: 125px 200px;
-	border-color: transparent;
-	border-style: solid;
-	border-bottom-color: #73c0e4;
-	border-radius: 24px;
+    content: "";
+    display: block;
+    position: absolute;
+    top: -240px;
+    width: 0;
+    height: 0;
+    z-index: -1;
+    border-width: 125px 200px;
+    border-color: transparent;
+    border-style: solid;
+    border-bottom-color: #73c0e4;
+    border-radius: 24px;
 }
 
 .envelope:after {
-	content: "";
-	display: block;
-	position: absolute;
-	bottom: 0;
-	width: 0;
-	height: 0;
-	pointer-events: none;
-	border-width: 125px 200px;
-	border-style: solid;
-	border-color: #73c0e4;
-	border-top-color: transparent;
-	border-radius: 24px;
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: 0;
+    width: 0;
+    height: 0;
+    pointer-events: none;
+    border-width: 125px 200px;
+    border-style: solid;
+    border-color: #73c0e4;
+    border-top-color: transparent;
+    border-radius: 24px;
 }
 
 .envelope .bottom-flap {
-	width: 400px;
-	height: 250px;
-	display: block;
-	position: absolute;
-	top: 0;
-	z-index: 1;
-	border-radius: 24px;
-	overflow: hidden;
-	pointer-events: none;
+    width: 400px;
+    height: 250px;
+    display: block;
+    position: absolute;
+    top: 0;
+    z-index: 1;
+    border-radius: 24px;
+    overflow: hidden;
+    pointer-events: none;
 }
 
 .envelope .bottom-flap:after {
-	content: "";
-	display: block;
-	position: absolute;
-	width: 400px;
-	height: 400px;
-	top: 40%;
-	border-radius: 24px;
-	background: #95cfeb;
-	transform: scaleY(0.7) rotate(45deg);
-	box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
+    content: "";
+    display: block;
+    position: absolute;
+    width: 400px;
+    height: 400px;
+    top: 40%;
+    border-radius: 24px;
+    background: #95cfeb;
+    transform: scaleY(0.7) rotate(45deg);
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
 }
 
 .thanks-text {
-	position: absolute;
-	width: 100%;
-	top: 60%;
-	z-index: -1;
-	font-size: 3vh;
-	text-align: center;
-	font-weight: 400;
-	z-index: 1;
+    position: absolute;
+    width: 100%;
+    top: 60%;
+    z-index: -1;
+    font-size: 3vh;
+    text-align: center;
+    font-weight: 400;
+    z-index: 1;
 }
 
 .submitted .paper {
-	-webkit-animation: paper-in 0.8s ease-out;
-	animation: paper-in 0.8s ease-out;
-	-webkit-animation-fill-mode: forwards;
-	animation-fill-mode: forwards;
+    -webkit-animation: paper-in 0.8s ease-out;
+    animation: paper-in 0.8s ease-out;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
 }
 
 .submitted.sign-up-container {
-	overflow: hidden;
+    overflow: hidden;
 }
 
 .submitted .envelope {
-	-webkit-animation: fly-away 0.5s ease-in;
-	animation: fly-away 0.5s ease-in;
-	-webkit-animation-delay: 1.3s;
-	animation-delay: 1.3s;
-	-webkit-animation-fill-mode: forwards;
-	animation-fill-mode: forwards;
+    -webkit-animation: fly-away 0.5s ease-in;
+    animation: fly-away 0.5s ease-in;
+    -webkit-animation-delay: 1.3s;
+    animation-delay: 1.3s;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
 }
 
 .submitted .envelope:before {
-	-webkit-animation: fold 0.5s ease-in;
-	animation: fold 0.5s ease-in;
-	-webkit-animation-delay: 0.7s;
-	animation-delay: 0.7s;
-	-webkit-animation-fill-mode: forwards;
-	animation-fill-mode: forwards;
+    -webkit-animation: fold 0.5s ease-in;
+    animation: fold 0.5s ease-in;
+    -webkit-animation-delay: 0.7s;
+    animation-delay: 0.7s;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
 }
 
-@
--webkit-keyframes paper-in { 30% {
-	transform: translateY(-80px);
-	padding-bottom: 125px;
+@-webkit-keyframes paper-in {
+    30% {
+        transform: translateY(-80px);
+        padding-bottom: 125px;
+    }
+    to {
+        top: 10px;
+        padding-bottom: 0;
+    }
 }
 
-to {
-	top: 10px;
-	padding-bottom: 0;
+@keyframes paper-in {
+    30% {
+        transform: translateY(-80px);
+        padding-bottom: 125px;
+    }
+    to {
+        top: 10px;
+        padding-bottom: 0;
+    }
 }
 
-}
-@
-keyframes paper-in { 30% {
-	transform: translateY(-80px);
-	padding-bottom: 125px;
-}
-
-to {
-	top: 10px;
-	padding-bottom: 0;
+@-webkit-keyframes fly-away {
+    to {
+        transform: translateX(200%) rotate(10deg);
+        opacity: 0;
+    }
 }
 
-}
-@
--webkit-keyframes fly-away {to { transform:translateX(200%)rotate(10deg);
-	opacity: 0;
-}
-
-}
-@
-keyframes fly-away {to { transform:translateX(200%)rotate(10deg);
-	opacity: 0;
+@keyframes fly-away {
+    to {
+        transform: translateX(200%) rotate(10deg);
+        opacity: 0;
+    }
 }
 
-}
-@
--webkit-keyframes fold {from { transform-origin:bottomcenter;
-	z-index: 10;
-}
-
-to {
-	z-index: 10;
-	transform-origin: bottom center;
-	transform: rotateX(-180deg) translateY(10px);
-	border-bottom-color: #5eb6e0;
-}
-
-}
-@
-keyframes fold {from { transform-origin:bottomcenter;
-	z-index: 10;
+@-webkit-keyframes fold {
+    from {
+        transform-origin: bottom center;
+        z-index: 10;
+    }
+    to {
+        z-index: 10;
+        transform-origin: bottom center;
+        transform: rotateX(-180deg) translateY(10px);
+        border-bottom-color: #5eb6e0;
+    }
 }
 
-to {
-	z-index: 10;
-	transform-origin: bottom center;
-	transform: rotateX(-180deg) translateY(10px);
-	border-bottom-color: #5eb6e0;
+@keyframes fold {
+    from {
+        transform-origin: bottom center;
+        z-index: 10;
+    }
+    to {
+        z-index: 10;
+        transform-origin: bottom center;
+        transform: rotateX(-180deg) translateY(10px);
+        border-bottom-color: #5eb6e0;
+    }
 }
 
-}
 .alreadyStorebtn {
-	width: 10vw;
-	height: 3vw;
-	border-radius: 0.2vw;
-	background-color: #465764;
-	border: none;
-	color: white;
-	font-size: 20px;
-	text-align: center;
-	top: 65%;
-	margin-top: 20px;
+    width: 10vw;
+    height: 3vw;
+    border-radius: 0.2vw;
+    background-color: #465764;
+    border: none;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    top: 65%;
+    margin-top: 20px;
 }
 
 .alreadyStoreText {
-	position: absolute;
-	width: 100%;
-	top: 35%;
-	z-index: -1;
-	font-size: 3vh;
-	text-align: center;
-	font-weight: 400;
-	z-index: 1;
+    position: absolute;
+    width: 100%;
+    top: 35%;
+    z-index: -1;
+    font-size: 3vh;
+    text-align: center;
+    font-weight: 400;
+    z-index: 1;
 }
