--- a/CEA101G5/WebContent/front-end/shopMain/shopMainCSS.css
+++ b/CEA101G5/WebContent/front-end/shopMain/shopMainCSS.css
@@ -30,8 +30,8 @@ a:hover {
 /* NavBar */
 #navbarUserIcon {
     width: 30px;
-    height: 24px;  
-    margin-right: 5px;
+    height: 25px;  
+    margin: 7px 2px 0px 2px;
 }
 
 #navbarUserIcon:hover {
@@ -41,7 +41,8 @@ a:hover {
 
 #navbarCartIcon {
     width: 33px;
-    height: 26.4px;
+    height: 28px;
+    margin: 6px 2px 0px 2px;
 }
 
 #navbarCartIcon:hover {
@@ -51,6 +52,11 @@ a:hover {
 
 .navbarDisplayController {
     opacity: 70%;
+}
+
+#memLogOut {
+	font-size: 17px;
+	margin: 3px 2px 0px 2px;
 }
 
 /* Signing In */
