--- a/CEA101G5/WebContent/front-store-end/queue/css/css.css
+++ b/CEA101G5/WebContent/front-store-end/queue/css/css.css
@@ -203,11 +203,11 @@ font {
     margin-top: 2%
 }
 
-*,
- ::after,
- ::before {
-    box-sizing: content-box;
-}
+/* *, */
+/*  ::after, */
+/*  ::before { */
+/*     box-sizing: content-box; */
+/* } */
 
 .addStorecontainer {
     border: 1px solid black;
@@ -222,9 +222,9 @@ font {
     margin-top: 5%;
 }
 
-.row {
-    margin-left: 5%;
-}
+/* .row { */
+/*     margin-left: 5%; */
+/* } */
 
 #addTextBlock {
     margin-top: 24px;
