--- a/CEA101G5/WebContent/front-store-end/menu/updatemenucss.css
+++ b/CEA101G5/WebContent/front-store-end/menu/updatemenucss.css
@@ -76,10 +76,15 @@ table {
 .bottom{
     display: flex;
 	flex-direction: row-reverse;
-	margin-top: -6vh;
+	margin-top: -3.5vh;
 	margin-right: 3vw;
 }
 .bottom input{
 	margin-right: 2vw;
 }
-
+.menuChar{
+	position: absolute;
+    top: 14%;
+    right: 12%;
+    z-index: 10;
+}
