--- a/CEA101G5/WebContent/front-customer-end/menu/css/css.css
+++ b/CEA101G5/WebContent/front-customer-end/menu/css/css.css
@@ -160,6 +160,9 @@ table {
   border-radius: 1vw;
   border: none;
   padding: 1vw;
+  background-color: black;
+  color: white;
+  margin-bottom: 1em;
 }
 .side-menu input:hover {
   cursor: pointer;
