--- a/CEA101G5/WebContent/front-store-end/menu/updatemenucss.css
+++ b/CEA101G5/WebContent/front-store-end/menu/updatemenucss.css
@@ -46,12 +46,13 @@ table {
 .container{
 	display:none;
 	position: relative;
-	left: 25%;
+	left: 1%;
 	background-color:#f6f6f6;
-    width: 50em;
-	height: 28em;
+    width: 10em;
+	height: 32em;
 	padding-top: 2em;
 	margin-top: 4.5em;
+	margin-left: -5em;
 }
 .top1{
     display: flex;
@@ -76,15 +77,16 @@ table {
 .bottom{
     display: flex;
 	flex-direction: row-reverse;
-	margin-top: -3.5vh;
-	margin-right: 3vw;
+	margin-right: 17em;
 }
 .bottom input{
 	margin-right: 2vw;
 }
 .menuChar{
 	position: absolute;
-    top: 14%;
-    right: 12%;
+    top: 55%;
+    right: 14%;
     z-index: 10;
+    bacground-color:#fcfcfc;
 }
+
