--- a/CEA101G5/WebContent/back-end/shopBackEndPromotion/shopBackEndPromotionCSS.css
+++ b/CEA101G5/WebContent/back-end/shopBackEndPromotion/shopBackEndPromotionCSS.css
@@ -175,8 +175,8 @@ input[type=number] {
 	top: 55%;
 }
 
-#promoPrice {
-	padding-left: 18px;
+#formPromoPrice {
+	padding-left: 19px;
 }
 
 .scroll-menu {
