--- a/CEA101G5/WebContent/back-end/shopBackEndPromotion/shopBackEndPromotionCSS.css
+++ b/CEA101G5/WebContent/back-end/shopBackEndPromotion/shopBackEndPromotionCSS.css
@@ -197,6 +197,7 @@ input[type=number] {
 	transform: translate(-50%, -50%);
 	border-radius: 10px;
 	display: none;
+	z-index: 9;
 }
 
 .addToCartImgContainer {
