--- a/CEA101G5/WebContent/front-customer-end/menu/css/css.css
+++ b/CEA101G5/WebContent/front-customer-end/menu/css/css.css
@@ -593,6 +593,9 @@ width: 90%;
   padding:1vh 2vw 1vh 2vw;
   font-size: 1.2vw;
 }
+.add:active{
+	background:rgb(221, 51, 51);
+}
 .bth input:focus{
   outline: none;
 }
