--- a/CEA101G5/WebContent/front-store-end/queue/css/css.css
+++ b/CEA101G5/WebContent/front-store-end/queue/css/css.css
@@ -283,3 +283,146 @@ font {
     font-size: 1.1vw;
     font-weight: bold;
 }
+
+
+/* 上方條 */
+
+.forfiexed {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 2;
+    background-color: #FA7E23;
+    opacity: 85%;
+}
+
+.title {
+    display: flex;
+    align-items: center;
+    z-index: 0;
+}
+
+.title img {
+    width: 4vw;
+    height: 4vw;
+    margin-left: 0.5vw;
+    margin-right: 0.5vw;
+    display: block;
+    opacity: 1;
+}
+
+.title img:hover {
+    cursor: pointer;
+}
+
+.title a {
+    display: block;
+    background-image: url("../img/LOGO/Logo3\ \(2\).png");
+    background-size: 100%;
+    width: 10vw;
+    height: 6vw;
+    white-space: wrap;
+    text-indent: 101%;
+    overflow: hidden;
+    background-repeat: no-repeat;
+    padding-left: 10px;
+}
+
+.loge {
+    display: flex;
+    width: 10vw;
+    height: 6vw;
+    padding-right: 50px;
+    align-self: center;
+}
+
+.loge a {
+    text-decoration: none;
+    color: white;
+    font-size: 1.7vw;
+    font-weight: bold;
+    padding-top: 0.7em;
+}
+
+.loge a:hover {
+    text-decoration: underline;
+    color: white;
+    font-size: 1.7vw;
+    font-weight: bold;
+    padding-top: 0.7em;
+}
+
+/* 下邊欄 */
+
+.footer {
+    background-color: #fa7e23;
+    opacity: 85%;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    padding-top: 5vh;
+}
+
+.footer a {
+    color: inherit;
+}
+
+.footer a:hover {
+    color: inherit;
+    text-decoration: none;
+}
+
+.footer-image {
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: -5vw;
+}
+
+.footer-image>img {
+    width: 18vw;
+    height: 20vh;
+    margin-bottom: 5vh;
+}
+
+.footer-image-bottom {
+    display: flex;
+    margin-left: 2vw;
+    margin-bottom: 4vh;
+}
+
+.footer-image-bottom>img {
+    width: 1.5vw;
+    height: 3vh;
+    margin-right: 2vw;
+}
+
+.footer-image-bottom>img:hover {
+    cursor: pointer;
+}
+
+.footer-item h2 {
+    font-size: 1.5vw;
+    font-weight: bolder;
+    color: #475665;
+    padding-bottom: 2vh;
+    border-bottom: 0.1598vw solid #475665;
+}
+
+.footer-item li:hover {
+    color: #475665;
+    cursor: pointer;
+}
+
+.footer-item {
+    font-size: 1.2vw;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 3vh;
+    color: white;
+}
+
+.footer-bottom {
+    text-align: center;
+}
